--- a/https:/satoshi-ninja.github.io/index.html
+++ b/https:/satoshi-ninja.github.io/index.html
@@ -62,9 +62,9 @@
 	
 	<div id="fh5co-home" class="js-fullheight-home" data-section="home" style="background-image: url(https://satoshi-ninja.github.io/spmt/images/hero_bg.jpg);" data-stellar-background-ratio="0.5">
   <div class="container">
-    <div class="col-md-6 viola">
+    <div class="col-md-6">
       <div class="js-fullheight-home fh5co-copy">
-	<div class="js-fullheight-home fh5co-copy-inner">
+	<div class="js-fullheight-home fh5co-copy-inner viola">
 	  <h1><img src='https://satoshi-ninja.github.io/spmt/images/spmt-logo.png'/>Secure Pivx Masternode Tool</h1>
 	  <h2>The fun and the convenience of Pivx, <br> the security of your hardware wallet.</h2>
 	</div>
