--- a/https:/satoshi-ninja.github.io/spmt/index.html
+++ b/https:/satoshi-ninja.github.io/spmt/index.html
@@ -65,7 +65,7 @@
     <div class="col-md-6">
       <div class="js-fullheight-home fh5co-copy">
 	<div class="js-fullheight-home fh5co-copy-inner">
-	  <h1><img src='https://satoshi-ninja.github.io/spmt/images/spmt-logo.png'/>Secure Pivx Masternode Tool</h1>
+	  <h1>Secure Pivx Masternode Tool</h1>
 	  <h2>The fun and the convenience of Pivx, <br> the security of your hardware wallet.</h2>
 	</div>
       </div>
